--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ div#serverList {
   display:none;
   padding:0;
   font-size:0;
-  background:url(../img/home-listarrow.png) no-repeat 97% center;
+  background:url(../Devast/img/home-listarrow.png) no-repeat 97% center;
   background-size:25px;
   overflow:hidden;
   outline:none;
